hello-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node-new 
  namespace: bjrdc-dev
  labels:
    app: hello-node-new
spec:
  ports:
  - port: 3000
    targetPort: 8080
    protocol: TCP
    #    nodePort: 3000
  selector:
    app: hello-node-new
